--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="wrapper">
-    <p id="section-adding">
+    <p id="add-new-task">
       <label for="new-task">Add Item</label>
     <div class="new-task-wrapper">
       <input id="new-task" class="task" type="text">
