--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
   <title>Todo App</title>
@@ -7,52 +8,57 @@
 </head>
 
 <body class="page">
-  <div class="header">
+  <header class="header">
+    <h1 class="header__title" hidden>Todo App</h1>
     <img class="main-img" src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="wrapper">
-    <p id="add-new-task">
+  </header>
+  <main class="wrapper">
+    <section id="add-new-task">
       <label class="label" for="new-task">Add Item</label>
-    <div class="new-task-wrapper">
-      <input id="new-task" class="task" type="text">
-      <button class="button">Add</button>
-    </div>
-    </p>
-    <h3 class="section-title">Todo</h3>
-    <ul class="items" id="incomplete-tasks">
-      <li class="one-item">
-        <input type="checkbox">
-        <label class="label task">Pay Bills</label>
-        <input type="text" class="task input-task">
-        <button class="button edit">Edit</button>
-        <button class="button delete">
-          <img class="remove-img" src="./remove.svg">
-        </button>
-      </li>
-      <li class="edit-mode one-item">
-        <input type="checkbox">
-        <label class="label task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input-task input-edit-mode">
-        <button class="button edit">Save</button>
-        <button class="button delete">
-          <img class="remove-img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3 class="section-title">Completed</h3>
-    <ul class="items" id="completed-tasks">
-      <li class="one-item">
-        <input type="checkbox" checked>
-        <label class="label task">See the Doctor</label>
-        <input type="text" class="task input-task">
-        <button class="button edit">Edit</button>
-        <button class="button delete">
-          <img class="remove-img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-  </div>
+      <div class="new-task-wrapper">
+        <input id="new-task" class="task" type="text">
+        <button class="button">Add</button>
+      </div>
+    </section>
+    <section>
+      <h2 class="section-title">Todo</h2>
+      <ul class="items" id="incomplete-tasks">
+        <li class="one-item">
+          <input type="checkbox">
+          <label class="label task">Pay Bills</label>
+          <input type="text" class="task input-task">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class="remove-img" src="./remove.svg">
+          </button>
+        </li>
+        <li class="edit-mode one-item">
+          <input type="checkbox">
+          <label class="label task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-task input-edit-mode">
+          <button class="button edit">Save</button>
+          <button class="button delete">
+            <img class="remove-img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2 class="section-title">Completed</h2>
+      <ul class="items" id="completed-tasks">
+        <li class="one-item">
+          <input type="checkbox" checked>
+          <label class="label task">See the Doctor</label>
+          <input type="text" class="task input-task">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class="remove-img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 
