--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page">
   <header class="header">
     <h1 class="header__title" hidden>Todo App</h1>
-    <img class="main-img" src="./eisenhower-matrix.jpg">
+    <img class="main-img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="wrapper">
@@ -30,7 +30,7 @@
           <input type="text" class="task input-task">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img class="remove-img" src="./remove.svg">
+            <img class="remove-img" src="./remove.svg" alt="Delete task button">
           </button>
         </li>
         <li class="edit-mode one-item">
@@ -39,7 +39,7 @@
           <input type="text" value="Go Shopping" class="task input-task input-edit-mode">
           <button class="button edit">Save</button>
           <button class="button delete">
-            <img class="remove-img" src="./remove.svg">
+            <img class="remove-img" src="./remove.svg" alt="Delete task button">
           </button>
         </li>
       </ul>
@@ -53,7 +53,7 @@
           <input type="text" class="task input-task">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img class="remove-img" src="./remove.svg">
+            <img class="remove-img" src="./remove.svg" alt="Delete task button">
           </button>
         </li>
       </ul>
