--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body class="page">
   <header class="header">
     <h1 class="header__title" hidden>Todo App</h1>
-    <img class="main-img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-    <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="wrapper">
+  <main class="main">
     <section id="add-new-task">
       <label class="label" for="new-task">Add Item</label>
-      <div class="new-task-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button class="button">Add</button>
+      <div class="add-item">
+        <input id="new-task" class="task add-item_input" type="text">
+        <button class="button add-item_button">Add</button>
       </div>
     </section>
     <section>
-      <h2 class="section-title">Todo</h2>
-      <ul class="items" id="incomplete-tasks">
+      <h2 class="section__title">Todo</h2>
+      <ul class="task__items" id="incomplete-tasks">
         <li class="one-item">
           <input type="checkbox">
           <label class="label task">Pay Bills</label>
@@ -45,8 +45,8 @@
       </ul>
     </section>
     <section>
-      <h2 class="section-title">Completed</h2>
-      <ul class="items" id="completed-tasks">
+      <h2 class="section__title">Completed</h2>
+      <ul class="task__items" id="completed-tasks">
         <li class="one-item">
           <input type="checkbox" checked>
           <label class="label task">See the Doctor</label>
